# ChibiPotEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cpp.hint
Engine/: CMakeLists.txt
Engine/src/: main.cpp
Engine/src/Application/: ApplicationDevice.cpp  ApplicationDevice.h  GameApp.cpp  GameApp.h
Engine/src/Assets/: GameConductor.h  Model.cpp  Model.h  ModelData.h  Sprite.h  SpriteAnimation.h  TextureObject.h
Engine/src/Assets/Sprite/: SpriteComponent.cpp  SpriteComponent.h
Engine/src/Assets/Texture2D/: Material.cpp  Material.h  Texture2D.h
Engine/src/Core/: CoreMinimal.h  Types.h
Engine/src/ECS/: AnimationClip.h  Component.h  Components.h  ECSBase.h  ECSCore.h  Entity.h  EntityBase.h  EntityCore.h  EntityManager.cpp  EntityManager.h  Sprite.h  SpriteAnimationComponent.h  TransformComponent.h
Engine/src/ECS/Entity/: GameConductor.h
Engine/src/ECS/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.h  TextureRectangle.h
Engine/src/GameLogic/: GameLogic.cpp  GameLogic.h
Engine/src/GameTimer/: GameTimer.cpp  GameTimer.h
Engine/src/Graphics/Device/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsProgram.cpp  GraphicsProgram.h
Engine/src/Graphics/Shader/: Shader.cpp  Shader.h  ShaderDevice.cpp  ShaderDevice.h  ShaderObject.cpp  ShaderObject.h
Engine/src/HLSL/: PixelShader.hlsl  VertexShader.hlsl
Engine/src/ImageLoader/: stb_image.h
Engine/src/Logger/: Logger.h
Engine/src/Math/: Vector2.h  Vector3.h
Engine/src/Renderer/: DriverTypes.h  RenderTypes.h  Renderer.cpp  Renderer.h
Engine/src/Resources/: Engine.rc  RCa01640  RCa16776  Resource.h
Engine/src/Window/: Window.cpp  Window.h
